--- a/extension/options/popup.html
+++ b/extension/options/popup.html
@@ -32,7 +32,7 @@
             <div class="alert-title">刷新很多次也连不上？</div>
             <div class="alert-content">
                 在Chrome浏览器地址栏输入<b>chrome://extensions/</b>，确保 <b class="text-primary">EsChunk插件</b> 和 <b
-                    class="text-primary">EsChunk服务</b> 这两个应用都处于开启状态
+                    class="text-primary">EsChunk服务</b> 这两个应用都已安装并且都处于开启状态
             </div>
         </div>
     </div>
