--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,8 @@
     <button id="Btn_Start">开始</button>
     <button id="Btn_End">结束</button>
     <p id="Content" style="width:200px;height:40px;border:1px solid rgb(161, 219, 241);"></p>
+    <p id="Content1" style="width:200px;height:40px;border:1px solid rgb(161, 219, 241);"></p>
+    <p id="Content2" style="width:200px;height:40px;border:1px solid rgb(161, 219, 241);"></p>
 
     <iframe id="iframe1" src="./iframe/iframe1.html" frameborder="0"></iframe>
     <iframe id="iframe2" src="./iframe/iframe2.html" frameborder="0"></iframe>
