--- a/web/iframe/iframe2.html
+++ b/web/iframe/iframe2.html
@@ -18,21 +18,23 @@
     <input type="text" id="Input2">
 
     <script>
-        var ESChunk = top.ESChunk || ESChunk;
+        top.ESChunkReady(function () {
+            var ESChunk = top.ESChunk || ESChunk;
 
-        var chunk = new ESChunk({
-            id: 'IFRAME2',
-            target: 'iframe',
-            iframeId: 'iframe2',
-            contentIds: ['Content', 'Input1', 'Input2']
-        })
+            var chunk = new ESChunk({
+                id: 'IFRAME2',
+                target: 'iframe',
+                iframeId: 'iframe2',
+                contentIds: ['Content', 'Input1', 'Input2']
+            })
 
-        document.getElementById('Btn_Start').addEventListener('click', function () {
-            chunk.start();
-        })
+            document.getElementById('Btn_Start').addEventListener('click', function () {
+                chunk.start();
+            })
 
-        document.getElementById('Btn_End').addEventListener('click', function () {
-            chunk.stop();
+            document.getElementById('Btn_End').addEventListener('click', function () {
+                chunk.stop();
+            })
         })
     </script>
 </body>
